--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -13,7 +14,6 @@
     </header>
     <main>
       <section class="card" id="html-section">
-        <section class="card" id="html-section">
           <h2>HTML</h2>
           <ul>
 
@@ -59,17 +59,17 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>A margin indicates the space around the element.</li>
+          <li>A padding indicates how much space we want around the content inside the element.</li>
+          <li>Must link the css style sheet in the html file in order for it to be added.</li>
+          <li>Order from inside out: content, padding, border, margin.</li>
+          <li>Can add CSS rules for two selectors by using a comma. example:</li>
+            <ul>
+              <li>header, <br> footer</li>
+            </ul>
         </ul>
       </section>
-   
-      <section class="card" id="git-section">
-        <h2>Git</h2>
-        <ul>
-          <li>Enter your Git notes here</li>
-        </ul>
-      </section>
-   
+      
       <section class="card" id="git-section">
         <h2>Git</h2>
         <ul>
@@ -82,6 +82,15 @@
           <li>start command opens that file. ex: start first-day.txt</li>
         </ul>
       </section>
+
+      <section class="card" id="git-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>Enter your JavaScript notes here</li>
+        </ul>
+      </section>
+   
+
     </main>
 
     <footer>
