updating CSS file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header id="top">
       <h1>Prework Study Guide</h1>
-      <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <img src="https://gifdb.com/images/high/umiko-ahagon-desktop-programming-eg5f8g2281ekfhde.gif" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
       <section class="card" id="html-section">
@@ -80,6 +80,22 @@
           <li>cd.. moves you back one directory.</li>
           <li>mkdir creates a directory.</li>
           <li>start command opens that file. ex: start first-day.txt</li>
+          <li>How to <b>NAVIGATE</b> and <b>CHECK</b> specific branch</li>
+            <ul>
+              <li>git status (checks current branch)</li>
+              <li>git checkout main (navigates to main branch)</li>
+              <li>git checkout whatever/feature (navigates to existing feature)</li>
+              <li>To make a <b>NEW</b> feature, add -b after checkout</li>
+            </ul>
+          <li>How to <b>UPDATE</b> and <b>MERGE</b> branch</li>
+            <ul>
+              <li>git add -A (adds all of the changed files to staging area)</li>
+              <li>git commit -m "insert update message here" (committing changes to repository)</li>
+              <li>git pull origin main (pulls updated branch before opening pull request)</li>
+              <li>git push origin feature/add-whatever (pushes all changes)</li>
+              <li>git checkout main (updates local main branch)</li>
+              <li>git pull origin main (pulls remote main branch into local main branch)</li>
+            </ul>
         </ul>
       </section>
 
