--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <body>
     <header id="top">
       <h1>Prework Study Guide</h1>
-      <img src="https://gifdb.com/images/high/umiko-ahagon-desktop-programming-eg5f8g2281ekfhde.gif" alt="Profile image of cat wearing a bow tie." />
+      <img src="https://gifdb.com/images/high/umiko-ahagon-desktop-programming-eg5f8g2281ekfhde.gif" alt="Coding girl" />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
       <section class="card" id="html-section">
@@ -102,7 +103,30 @@
       <section class="card" id="git-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>var keyword creates a variable</li>
+            <ul>
+              <li>const keyword "locks" the variable</li>
+              <li>use quotes " " around <b>string</b> variables</li>
+            </ul>
+        <li>all JavaScript lines end with a semi colan</li>
+        <li>use console.log() to outpout the value of whats in the ()</li>
+        <li>use script src"" to add the js file to html, usually at the end of the code.</li>
+        <li>cannot log a variable that hasnt been created yet!</li>
+        <li>Operators!</li>
+            <ul>
+              <li>=== (3) checks if two values are equal</li>
+              <li>++ means +1</li>
+            </ul>
+        <li>array values start at <b>0</b> and go up</li>
+        <li>let variable allows it to be changed <b>over time</b></li>
+        <li>for op allows us to loop our arrays. ex:</li>
+            <ul>
+              <li>for(let x = 0; x < shapes.length; x++) { <br> 
+                console.log(shapes[x]); <br>
+              }</li>
+              <li>this statement allows x to be changed, then it says if x is less than shapes.length, add 1</li>
+              <li>in the console.log, shapes is used to define which array we're using, and the [] define which specific variable.</li>
+            </ul>
         </ul>
       </section>
    
@@ -112,5 +136,8 @@
     <footer>
       <p>I can code!</p>
     </footer>
+
+    <script src="./assets/script.js"></script>
+
   </body>
 </html>
