fixed bug and finished JS output code

--- a/index.html
+++ b/index.html
@@ -127,6 +127,18 @@
               <li>this statement allows x to be changed, then it says if x is less than shapes.length, add 1</li>
               <li>in the console.log, shapes is used to define which array we're using, and the [] define which specific variable.</li>
             </ul>
+        <li>to comment out code, use /*, ending with */</li>
+        <li>How to create a <b>FUNCTION!</b>:</li>
+          <ul>
+            <li>function helloWorld() { <br>
+                  console.log("Hello, world, I am a function!") <br> 
+                }</li>
+          </ul>
+        <li>you would "call" said function, by using helloWorld();</li>
+        <li>to pick a <b>RANDOM VARIABLE</b> from an array, use this:</li>
+          <ul>
+            <li>const x = x[Math.floor(Math.random() * x.length)];</li>
+          </ul>
         </ul>
       </section>
    
