--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
             <ul>
               <li>header, <br> footer</li>
             </ul>
+          <li>display: block; to make an element a block.</li>
+          
         </ul>
       </section>
       
