--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
               <li>header, <br> footer</li>
             </ul>
           <li>display: block; to make an element a block.</li>
-          
+          <li>Static position: Normal flow, default position.</li>
+          <li>Relative position: Normal flow but is offset based on provided value.</li>
+          <li>Absolite position: element removed from normal flow, final position is relative to positioned parent.</li>
+          <li>FIxed position: element removed from normal flow, relativce to viewport and determined by values.</li>
         </ul>
       </section>
       
