added html cheatsheet

--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
                 
                 <li> example: <a href="..........">Text desc here </a> </li>
               </ul>
-          </ul>
+              <li>Semantic element cheat sheet:</li>
+              <li style="margin-right: 1700px;"><img src="./assets/img_sem_elements.gif" alt="semantic elements" style="width: 300px;height: auto;"></li>
+            <li>To move the picture above how I did, i used style="margine=right:"xxpx" WITHIN the first li</li>
+            <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Reference">HTML cheatsheet></li>
+            </ul>
         </section>
       </section>
    
